# quantum-hybrid-portfolio

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  DASHBOARD_FEATURE_GUIDE.md  DASHBOARD_FEATURE_SUMMARY.md  DASHBOARD_FULL_README.md  DASHBOARD_README.md  DASHBOARD_TEST_SUMMARY.md  DASHBOARD_VISUAL_GUIDE.md  DASHBOARD_WALKTHROUGH_REPORT.md  DIRECTORY_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.fly  Dockerfile.hf  ENHANCED_FEATURES_README.md  ENHANCED_IMPLEMENTATION_DOCS.md  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  HOW_TO_RUN.md  PRODUCTION_READINESS_PLAN.md  PROJECT_OVERVIEW.md  QUANTUM_INTEGRATION_ROADMAP.md  QUICKSTART.md  README.md  WALKTHROUGH_SUMMARY.md  advanced_dashboard.py  api.py  api_config_patch.py  core_features_spec.docx  dashboard.py  demo_dashboard_features.sh  deploy_hf_spaces.sh  deploy_production.sh  docker-compose.yml  enhanced_api.py  enhanced_dashboard.py  enhanced_visualizations.py  (+23 more)
.claude/: settings.local.json
.qwen/: settings.json
api/: __init__.py  __main__.py  app.py
benchmarks/: __init__.py
config/: __init__.py  api_config.py  production_config.py  qsw_config.py
configs/: qoblib_benchmark.yaml
core/: __init__.py  braket_estimator.py  portfolio_optimizer.py
data/: api.sqlite3  sample_loader.py
docs/: API_PRODUCT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REMAINING_WORK.md  BRAKET_AND_DWAVE_USAGE.md  BRAKET_AWS_SETUP.md  DASHBOARD_GUIDE.md  DATA_PIPELINE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DWAVE_INTERVIEW_PREP.md  FLY_DEPLOY.md  GETTING_STARTED.md  GPU_SIM_SETUP.md  HF_VENTURE.md  (+19 more)
(+420 files in other folders)
