[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-hybrid-portfolio"
version = "0.1.0"
description = "Pragmatic quantum-inspired portfolio optimization using QSW"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.scripts]
app = "api.app:app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "frontend*", "web*", "notebooks*", "examples*", "docs*"]
