[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-hybrid-portfolio"
version = "0.1.0"
description = "Pragmatic quantum-inspired portfolio optimization using QSW"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
app = "api.app:app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-vercel.txt"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "frontend*", "web*", "notebooks*", "examples*", "docs*"]

[tool.pytest.ini_options]
markers = [
    "braket_mock: tests that use BraketAnnealingOptimizer in mock/classical-fallback mode (no AWS)",
    "braket_real: tests that require a real D-Wave QPU via Braket (set BRAKET_REAL_DEVICE_TEST=1)",
    "gpu: tests that require a CUDA-capable GPU (set GPU_TEST=1 to enable)",
]
